# liquefy

./: .gitignore  LICENSE  PARAD0X_LABS_LIQUEFY_MASTER_REPORT.md  README.md  ai_analysis.py  ai_token_compression_results.json  ai_token_compression_spec_bench.py  ai_workload_bench.py  decompress_local.py  install.sh  liquefy  llm_token_bench.py  llm_token_bench_results.json  pyproject.toml  requirements.txt  x402_receipt_benchmark.py
.github/: dependabot.yml
.github/workflows/: security-audit.yml
REPORTS/: BENCHMARK_SUITE_RESULTS.md  ENTERPRISE_CERTIFICATION_V1.md  SEARCHABLE_GLACIER_PROOF.md  ULTIMATE_TEST_LOGS.md  UNICORN_BENCHMARK.md  VERIFICATION_REPORT.md  benchmark_suite_results.json
appliance/: Dockerfile  README.md  entrypoint.sh
appliance-public/: Dockerfile  README.md  entrypoint.sh
docs/: COMPREHENSIVE_ENGINE_CERTIFICATION.md  STACK.md  benchmark-methodology.md  decoder-cli-contract.md  enterprise-evaluation.md  enterprise-verification-report.md  licensing.md  public-security-posture.md  search-cli-contract.md  search-gate-specification.md  technical-specification.md
engines/: README.md  __init__.py  observability.py  orchestrator.py  safety_valve.py  security_compliance.py
engines/apache_codec/: NULL_Apache_Entropy_Focused.py  NULL_Apache_Repetition_Focused.py  README.md
engines/aws_codec/: NULL_Aws_CloudTrail_Entropy_Focused.py  NULL_Aws_VpcFlow_Entropy_Focused.py  README.md  aws_benchmark.py  cloudtrail_benchmark.py
engines/json_codec/: NULL_Json_Columnar_Gun_v1.py  NULL_Json_Entropy_Focused.py  NULL_Json_Repetition_Focused.py  README.md  json_benchmark.py
engines/k8s_codec/: NULL_K8s_Entropy_Focused.py  NULL_K8s_Native_Velocity.py  README.md  k8s_benchmark.py
engines/netflow_codec/: NULL_Netflow_V5_Entropy_Focused.py  README.md  netflow_benchmark.py
engines/nginx_codec/: NULL_Nginx_Entropy_Focused.py  NULL_Nginx_Repetition_Focused.py  README.md  nginx_champion_benchmark.py  nginx_showdown.py
engines/scm_codec/: NULL_Scm_GitHub_Entropy_Focused.py  README.md  github_benchmark.py
engines/sql_codec/: NULL_Sql_Entropy_Focused.py  NULL_Sql_Native_Velocity.py  NULL_Sql_Repetition_Focused.py  README.md  sql_champion_benchmark.py  sql_final_fleet_benchmark.py  sql_scanner.c
engines/syslog_codec/: NULL_Syslog_Entropy_Focused.py  NULL_Syslog_Repetition_Focused.py  README.md  syslog_champion_benchmark.py
engines/universal_codec/: NULL_Universal_Entropy_Focused.py  README.md  (+2 more)
liquefy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
proof-pack/: README.md  hashes.txt
tests/: test_failclosed.py  test_pcc.py  test_security.py
tools/: benchmark.py  benchmark_suite.py  download_decoder.sh  hyper_orchestrator.py  run_entropy_benchmark.py  verify_e2e.py
(+11 files in other folders)
