[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liquefy"
version = "0.1.0"
description = "Columnar compression that beats Zstd on structured data. 61x on JSON. Built-in search. AES-256-GCM."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Parad0x Labs", email = "labs@parad0x.io" }]
keywords = [
  "compression", "zstd", "columnar", "json", "structured-data",
  "log-compression", "encryption", "aes-256-gcm", "ai-agents",
  "solana", "x402", "telemetry", "analytics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: Database",
]
dependencies = [
  "zstandard>=0.21.0",
  "xxhash>=3.0.0",
  "cryptography>=41.0.0",
]

[project.urls]
Homepage    = "https://github.com/Parad0x-Labs/liquefy"
Repository  = "https://github.com/Parad0x-Labs/liquefy"
"DNA x402"  = "https://github.com/Parad0x-Labs/dna-x402"

[project.scripts]
liquefy = "liquefy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
