[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liquefy"
version = "0.2.0"
description = "Columnar compression that beats Zstd on structured data. 226x on JSON. Built-in search. MIT."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Parad0x Labs", email = "labs@parad0x.io" }]
keywords = [
  "compression", "zstd", "columnar", "json", "structured-data",
  "log-compression", "log-analytics", "telemetry",
  "ai-agents", "solana", "x402",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: Database",
]
dependencies = [
  "zstandard>=0.21.0",
  "xxhash>=3.0.0",
  "cryptography>=41.0.0",
]

[project.optional-dependencies]
fast = [
  "orjson>=3.9.0",
  "numpy>=1.24.0",
]
bench = [
  "orjson>=3.9.0",
  "numpy>=1.24.0",
  "lz4>=4.0.0",
  "brotli>=1.0.9",
]

[project.urls]
Homepage   = "https://github.com/Parad0x-Labs/liquefy"
Repository = "https://github.com/Parad0x-Labs/liquefy"
"DNA x402" = "https://github.com/Parad0x-Labs/dna-x402"

[project.scripts]
liquefy = "liquefy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["liquefy*", "engines*"]

[tool.setuptools.package-dir]
"liquefy" = "src/liquefy"
